--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,8 @@
-spring:
-  application:
-    name:
+eureka:
+  instances:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      default-zone: http://localhost:8761/eureka
