--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,1 +1,11 @@
-
+spring:
+  application:
+    name: Config-Dev
+eureka:
+  instances:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      default-zone: http://localhost:8761/eureka
